# Read_CORSIKA

./: CMakeLists.txt  Readme.md
compiled/lib/: libClass_rdict.pcm
include/: LinkDef.h  Photon_bunches.h  Tel_groups.h  absorb.h  atmprof.h  events.h  fileopen.h  io_basic.h  io_hess.h  mc_aux.h  rpolator.c  rpolator.h
src/: Draw.cpp  Photon_bunches.cpp  Tel_groups.cpp  get_photons.cpp
